sometimes fix horizontal scroll

--- a/src/components/Gallery/style.scss
+++ b/src/components/Gallery/style.scss
@@ -1,9 +1,5 @@
 .gallery-wrap {
   background-color: #d53f41;
-  margin-left: -5vw;
-  margin-right: -5vw;
-  width: auto;
-  height: 700vh;
 }
 
 .gallery-counter {
@@ -15,7 +11,7 @@
   line-height: 16px;
   color: #dbd8d6;
 
-  font-family: "Bai Jamjuree";
+  font-family: 'NeueMontreal-Book';
   font-weight: 600;
 
   font-size: 16px;
@@ -56,7 +52,7 @@
     color: white;
     .gallery-info-title {
       line-height: 6vw;
-      font-family: "Bai Jamjuree";
+      font-family: 'NeueMontreal-Book';
       font-weight: 600;
 
       font-size: 6vw;
@@ -77,7 +73,7 @@
     .gallery-info-category {
       position: relative;
       line-height: 24px;
-      font-family: "Bai Jamjuree";
+      font-family: 'NeueMontreal-Book';
       font-weight: 400;
       font-size: 24px;
       -webkit-font-smoothing: antialiased;
@@ -89,14 +85,12 @@
     height: 100%;
     display: grid;
     grid-template-columns: 20vw 1fr 200px;
-    width: 100vw;
+    width: 100%;
 
     &.is-reveal {
       .gallery-item-image {
         transform: scale(1);
         filter: none;
-        height: auto;
-        width: auto;
       }
     }
   }
