--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ body {
   /* scroll-snap-align: center; */
   height: 100%;
 
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   background-color: #fff;
@@ -60,4 +60,3 @@ body {
     opacity: 1;
   }
 }
-
